# donkeyops

./: .donkeyops.yml  .donkeyops.yml.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json
.github/workflows/: ci.yml  lint.yml  rucio_bot_checks.yml  stale_check.yml  test.yml
donkeyops/: auth.py  cli.py  core.py  server.py
donkeyops/checks/: base.py  stale_prs.py
ruciobot/: auth.py  cli.py  server.py
ruciobot/checks/: __init__.py  base.py  failing_tests.py  needs_rebase.py  stale_prs.py
src/: index.ts
test/: index.test.ts
test/fixtures/: pull_request.opened.json
tests/: test_core.py
tests/checks/: test_failing_tests.py  test_needs_rebase.py  test_stale_prs.py
